--- a/templates/main.html
+++ b/templates/main.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "template.html" %}
+{% block title %}Home{% endblock %}
+{% block content %}
+<div id="new-question">
+    <form action="/add-question" method="post">
+        <input name="question-title" type="text" placeholder="Question title" />
+        <textarea name="question-message" placeholder="Question text"></textarea>
+        <button type="submit">Submit</button>
+    </form>
+</div>
+<div id="question-list">
+    {% for question in data %}
+    <div class="question">
+        <label class="title">{{ data[question].title }}</label>
+        <div class="message">{{ data[question].message }}</div>
+        <div class="answers {{ data[question].answers_class }}">
+            {% for answer in data[question].answers %}
+            <div class="answer">{{ answer.message }}</div>
+            {% endfor %}
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% endblock %}
