--- a/templates/question.html
+++ b/templates/question.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "template.html" %}
+{% block title %}kérdés fasz{% endblock %}
+{% block content %}
+coming soon...
+{% endblock %}
