--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300&family=Titillium+Web:wght@300&display=swap');
+
 :root {
     /* sizes */
     --header-height: 60px;
+    --content-width: 800px;
 
     /* colors */
+    --palette-1: #d83f87;
+    --palette-2: #2a1b3d;
+    --palette-3: #44318d;
+    --palette-4: #e98074;
+    --palette-5: #9dabaf;
+
     --color-dark: #222;
-    --color-border: #ccc;
+    --color-dark2: #484545;
+    --color-border: #737373;/*#ccc;*/
     --color-bright: #eee;
+    --color-middle: #dadada;
     --color-extrabright: #fff;
-    --color-dark-highlight: #10ff7b;
-    --color-bright-highlight: #2a945a;
+    --color-dark-highlight: #36eac0;
 }
 
 * {
@@ -18,6 +28,7 @@
     outline: 0;
     font-size: 14px;
     font-family: Roboto, sans-serif;
+    box-sizing: border-box;
 }
 
 .hidden {
@@ -25,8 +36,13 @@
 }
 
 body {
-    background: var(--color-bright);
-    color: var(--color-dark);
+    background: var(--color-dark2);
+    color: var(--color-bright);
+    background-image: url('/static/bg.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 div#wrapper {
@@ -47,31 +63,122 @@ div#header > * {
     display: inline-block;
     line-height: var(--header-height);
     padding: 0 20px;
+    vertical-align: top;
 }
 
 div#content {
     width: 100%;
-    max-width: 1000px;
+    max-width: var(--content-width);
     margin: 0 auto;
-    padding: 40px 10px;
+    padding: 40px 0px;
 }
 
 div#new-question {
-    margin-bottom: 40px;
-}
-
-div#new-question > form > * {
-    display: block;
-}
-
-div#new-question > form > *:not(button) {
+    padding: 0;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
     width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
+    max-width: var(--content-width);
+}
+
+div#new-question > form {
+    position: relative;
 }
 
 div#new-question > form > input[name="question-title"] {
+    width: 100%;
+    padding: 0px 10px;
     font-size: 1.3em;
+    height: calc(var(--header-height) - 20px);
+    outline: 10px solid var(--color-dark);
+    position: relative;
+    z-index: 10000;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    transition: all ease-in 0.1s;
+}
+
+div#new-question > form:focus-within > input[name="question-title"] {
+    -webkit-border-bottom-right-radius: 0px;
+    -webkit-border-bottom-left-radius: 0px;
+    -moz-border-radius-bottomright: 0px;
+    -moz-border-radius-bottomleft: 0px;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    margin: 0 10px;
+    width: calc(100% - 20px);
+}
+
+div#new-question > form > .slider {
+    position: absolute;
+    top: -200%;
+    transition: all ease-in 0.2s;
+    width: 100%;
+    padding: 0 10px 10px;
+    background: var(--color-dark);
+    -webkit-box-shadow: 0px 10px 23px 0px rgba(0, 0, 0, 0);
+    -moz-box-shadow: 0px 10px 23px 0px rgba(0,0,0,0);
+    box-shadow: 0px 10px 23px 0px rgba(0, 0, 0, 0);
+    opacity: 0;
+}
+
+div#new-question > form:focus-within > .slider {
+    -webkit-box-shadow: 0px 10px 23px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 10px 23px 0px rgba(0,0,0,0.6);
+    box-shadow: 0px 10px 23px 0px rgba(0, 0, 0, 0.6);
+    top: var(--header-height);
+    opacity: 1;
+    -webkit-border-bottom-right-radius: 12px;
+    -webkit-border-bottom-left-radius: 12px;
+    -moz-border-radius-bottomright: 12px;
+    -moz-border-radius-bottomleft: 12px;
+    border-bottom-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+}
+
+div#new-question > form > .slider > * {
+    padding: 0;
+    display: block;
+    width: 100%;
+    transform: scale(0);
+    transition: all ease-in 0.3s;
+    opacity: 0;
+    transition-delay: 0.2s;
+}
+
+div#new-question > form:focus-within > .slider > * {
+    transform: scale(1);
+    opacity: 1;
+}
+
+div#new-question > form > .slider > textarea {
+    padding: 10px !important;
+    width: 100%;
+    line-height: 1.1em;
+    height: calc(1.1em * 10 + 20px);
+}
+
+div#new-question > form > .slider > button {
+    padding: 10px 0;
+    margin-top: 10px;
+    background: var(--color-dark-highlight);
+    color: var(--color-dark);
+    font-weight: bold;
+    font-size: 1.1em;
+    cursor: pointer;
+    -webkit-border-bottom-right-radius: 12px;
+    -webkit-border-bottom-left-radius: 12px;
+    -moz-border-radius-bottomright: 12px;
+    -moz-border-radius-bottomleft: 12px;
+    border-bottom-right-radius: 12px;
+    border-bottom-left-radius: 12px;
+}
+
+div#new-question > form > .slider > button:hover {
+    background: var(--color-dark);
+    color: var(--color-dark-highlight);
 }
 
 div#new-question > form > button {
@@ -90,14 +197,22 @@ div#new-question > form > button:hover {
     opacity: 0.9;
 }
 
-div#new-question > form > *:not(button):focus {
-    outline: 2px solid var(--color-bright-highlight);
-}
-
 #question-list > .question {
     margin-bottom: 20px;
-    padding: 10px;
-    background: var(--color-extrabright);
+    padding: 20px;
+    background: var(--color-middle);
+    color: var(--color-dark);
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    border-radius: 12px;
+    transition: all ease-in 0.1s;
+    color: #ccc;
+    background: -moz-linear-gradient(-30deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.78) 49%, rgba(43,43,43,0.75) 100%);
+    background: -webkit-linear-gradient(-30deg, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.78) 49%,rgba(43,43,43,0.75) 100%);
+    background: linear-gradient(150deg, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.78) 49%,rgba(43,43,43,0.75) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#bf2b2b2b',GradientType=1 );
+    backdrop-filter: blur(5px);
+    font-family: 'Lexend', sans-serif;
 }
 
 #question-list > .question:last-child {
@@ -105,13 +220,15 @@ div#new-question > form > *:not(button):focus {
 }
 
 #question-list > .question > .title {
+    font-family: 'Titillium Web', sans-serif;
     font-size: 1.4em;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     display: block;
+    color: #8de8d4;
 }
 
 #question-list > .question > .answers {
-    margin-top: 10px;
+    margin-top: 15px;
     border-top: 2px dashed var(--color-border);
 }
 
