--- a/templates/main.html
+++ b/templates/main.html
@@ -4,7 +4,7 @@
 <div id="question-list">
     {% for question in data %}
     <div class="question">
-        <label class="title">{{ data[question].title }}</label>
+        <a class="title" href="/question/{{ data[question].id }}">{{ data[question].title }}</a>
         <div class="message">{{ data[question].message|safe }}</div>
         <div class="answers {{ data[question].answers_class }}">
             {% for answer in data[question].answers %}
