--- a/templates/question.html
+++ b/templates/question.html
@@ -3,6 +3,11 @@
 {% block content %}
 <div id="question-list">
     <div class="question">
+        <label class="vote-count">
+            <label>{{ question.vote_number }}</label>
+            <a href="/vote-question/{{ question.id }}?vote=1"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+            <a href="/vote-question/{{ question.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
+        </label>
         <label class="title" >{{ question.title }}</label>
         <div class="message">{{ question.message|safe }}</div>
     </div>
@@ -11,6 +16,14 @@
             {% for answer in answers %}
             <div class="answer">{{ answer.message|safe }}</div><br>
             {% endfor %}
+        </div>
+        <div class="reply-form">
+            <form action="/question/{{ question.id }}/new-answer" method="POST">
+                <textarea name="answer-message"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+
+
         </div>
     </div>
 </div>
