--- a/templates/template.html
+++ b/templates/template.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}{% endblock %} | NoHitSherlock</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='main.js') }}"></script>
         {% endblock %}
