--- a/templates/question.html
+++ b/templates/question.html
@@ -3,23 +3,30 @@
 {% block content %}
 <div id="question-list">
     <div class="question">
-        <label class="vote-count">
+        <label class="vote-count noselect">
+            <a class="vote-up" href="/vote-question/{{ question.id }}?vote=1"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
             <label>{{ question.vote_number }}</label>
-            <a href="/vote-question/{{ question.id }}?vote=1"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
-            <a href="/vote-question/{{ question.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
+            <a class="vote-down" href="/vote-question/{{ question.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
         </label>
-        <label class="title" >{{ question.title }}</label>
+        <label class="title" >{{ question.title }}<small>{{ question.submission_datetime }}</small></label>
         <div class="message">{{ question.message|safe }}</div>
     </div>
-    <div class="question">
+    <div class="question replies">
         <div class="answers {{ question.answers_class }}">
             {% for answer in answers %}
-            <div class="answer">{{ answer.message|safe }}</div><br>
+            <div class="answer">
+                <label class="vote-count noselect">
+                    <a class="vote-up" href="/vote-answer/{{ answer.id }}?vote=1"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+                    <label>{{ answer.vote_number }}</label>
+                    <a class="vote-down" href="/vote-answer/{{ answer.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
+                </label>
+                <small>{{ answer.submission_datetime }}</small>{{ answer.message|safe }}
+            </div><br>
             {% endfor %}
         </div>
         <div class="reply-form">
             <form action="/question/{{ question.id }}/new-answer" method="POST">
-                <textarea name="answer-message"></textarea>
+                <textarea name="answer-message" required placeholder="Type your answer here.."></textarea>
                 <button type="submit">Submit</button>
             </form>
 
