edit and remove question buttons

--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,12 @@
 {% extends "template.html" %}
 {% block title %}{{ question.title }}{% endblock %}
 {% block content %}
+<script type="text/javascript">
+    var question_data = {
+      id: {{ question.id }},
+      title: '{{ question.title }}'
+    };
+</script>
 <div id="question-list">
     <div class="question">
         <label class="vote-count noselect">
@@ -8,8 +14,8 @@
             <label>{{ question.vote_number }}</label>
             <a class="vote-down" href="/vote-question/{{ question.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
         </label>
-        <label class="title" >{{ question.title }}<small>{{ question.submission_datetime }}</small></label>
-        <div class="message">{{ question.message|safe }}</div>
+        <label class="title" >{{ question.title }}<a class="edit button" href="#" onclick="editQuestion();"><i class="fa fa-pencil" aria-hidden="true"></i></a><a class="delete button" href="/question/{{ question.id }}/delete"><i class="fa fa-trash" aria-hidden="true"></i></a><small>{{ question.submission_datetime }}</small></label>
+        <div id="q-message" class="message">{{ question.message|safe }}</div>
     </div>
     <div class="question replies">
         <div class="answers {{ question.answers_class }}">
