--- a/static/style.css
+++ b/static/style.css
@@ -376,6 +376,7 @@ div.reply-form button {
     border-radius: 10px;
     transition: all ease-in 0.1s;
     cursor: pointer;
+    font-weight: bold;
 }
 
 div.reply-form button:hover {
@@ -421,9 +422,16 @@ div.reply-form button:hover {
 #question-list > .question > .answers > .answer > .vote-count {
     position: absolute;
     left: 0;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
     width: 32px;
     text-align: center;
+}
+#question-list > .question > .answers > .answer > .vote-count > label {
+    font-weight: bold;
+}
+#question-list > .question > .answers > .answer > .vote-count > a {
+    font-size: 0.8em;
 }
 
 #question-list > .question > .answers > .answer > .vote-count > * {
@@ -432,4 +440,20 @@ div.reply-form button:hover {
 
 #question-list > .question > .answers > .answer > .vote-count > a {
     color: var(--color-dark-highlight);
+}
+
+.question .title a.button {
+    margin-left: 5px;
+    color: black;
+    background: var(--color-dark-highlight);
+    display: inline-block;
+    line-height: 0.5em;
+    padding: 3px;
+    border-radius: 3px;
+    transition: all ease-in 0.1s;
+}
+
+.question .title a.button:hover {
+    opacity: 0.7;
+    transform: scale(1.1);
 }
