--- a/templates/template.html
+++ b/templates/template.html
@@ -28,9 +28,11 @@
                 </svg>
                 <div id="new-question">
                     <form action="/add-question" method="post">
-                        <input name="question-title" type="text" placeholder="Type your question here.." autocomplete="off" required/>
+                        <input type="hidden" id="form-type" name="form-type" value="add">
+                        <input type="hidden" id="edit-id" name="edit-id" value="-1">
+                        <input id="question-title" name="question-title" type="text" placeholder="Type your question here.." autocomplete="off" required/>
                         <div class="slider">
-                            <textarea name="question-message" placeholder="Please provide additional info.." required></textarea>
+                            <textarea id="question-message" name="question-message" placeholder="Please provide additional info.." required></textarea>
                             <button type="submit">Submit</button>
                         </div>
                     </form>
