--- a/static/style.css
+++ b/static/style.css
@@ -292,6 +292,7 @@ div#new-question > form > button:hover {
 
 #question-list > .question.replies > .answers > .answer {
     padding-left: 32px;
+    min-width: 200px;
 }
 
 svg#logo {
@@ -361,7 +362,7 @@ div.reply-form textarea {
     display: block;
     width: 100%;
     padding: 15px;
-    height: 100px;
+    height: 150px;
     line-height: 1.5em;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -456,4 +457,14 @@ div.reply-form button:hover {
 .question .title a.button:hover {
     opacity: 0.7;
     transform: scale(1.1);
+}
+
+#question-list > .question > .answers > .answer > .answer-buttons {
+    position: absolute;
+    right: 10px;
+    top: 5px;
+}
+
+#question-list > .question > .answers > .answer > .answer-buttons > a {
+    color: var(--color-dark-highlight);
 }
