--- a/templates/question.html
+++ b/templates/question.html
@@ -21,18 +21,24 @@
         <div class="answers {{ question.answers_class }}">
             {% for answer in answers %}
             <div class="answer">
+                <div class="answer-buttons">
+                    <a class="edit button" href="#" onclick="editAnswer({{ answer.id }});"><i class="fa fa-pencil" aria-hidden="true"></i></a>
+                    <a class="delete button" href="/answer/{{ answer.id }}/delete"><i class="fa fa-trash" aria-hidden="true"></i></a>
+                </div>
                 <label class="vote-count noselect">
                     <a class="vote-up" href="/vote-answer/{{ answer.id }}?vote=1"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
                     <label>{{ answer.vote_number }}</label>
                     <a class="vote-down" href="/vote-answer/{{ answer.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
                 </label>
-                <small>{{ answer.submission_datetime }}</small>{{ answer.message|safe }}
+                <small>{{ answer.submission_datetime }}</small><span id="answer-message-{{ answer.id }}">{{ answer.message|safe }}</span>
             </div><br>
             {% endfor %}
         </div>
         <div class="reply-form">
             <form action="/question/{{ question.id }}/new-answer" method="POST">
-                <textarea name="answer-message" required placeholder="Type your answer here.."></textarea>
+                <input type="hidden" name="form-type" id="answer-form-type" value="add">
+                <input type="hidden" name="edit-id" id="answer-edit-id" value="-1">
+                <textarea name="answer-message" id="answer-message" required placeholder="Type your answer here.."></textarea>
                 <button type="submit">Submit</button>
             </form>
 
