--- a/templates/template.html
+++ b/templates/template.html
@@ -26,7 +26,7 @@
                         <use xlink:href="#logo-text" class="text-copy"></use>
                     </g>
                 </svg>
-                <div id="new-question">
+                <div id="new-question" class="add">
                     <form action="/add-question" method="post">
                         <input type="hidden" id="form-type" name="form-type" value="add">
                         <input type="hidden" id="edit-id" name="edit-id" value="-1">
@@ -34,6 +34,7 @@
                         <div class="slider">
                             <textarea id="question-message" name="question-message" placeholder="Please provide additional info.." required></textarea>
                             <button type="submit">Submit</button>
+                            <button type="button" id="cancel-edit" onclick="cancelEdit();" class="hidden">Cancel</button>
                         </div>
                     </form>
                 </div>
