--- a/templates/question.html
+++ b/templates/question.html
@@ -15,6 +15,11 @@
             <a class="vote-down" href="/vote-question/{{ question.id }}?vote=-1"><i class="fa fa-arrow-down" aria-hidden="true"></i></a>
         </label>
         <label class="title" >{{ question.title }}<a class="edit button" href="#" onclick="editQuestion();"><i class="fa fa-pencil" aria-hidden="true"></i></a><a class="delete button" href="/question/{{ question.id }}/delete"><i class="fa fa-trash" aria-hidden="true"></i></a><small>{{ question.submission_datetime }}</small></label>
+        <div class="image-container {{ question.image_class }}" style="background-image:url('/{{ question.image }}')">
+            <div>
+                <img src="/{{ question.image }}"/>
+            </div>
+        </div>
         <div id="q-message" class="message">{{ question.message|safe }}</div>
     </div>
     <div class="question replies">
